--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,22 +8,24 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><img src="/img/pokebola.png" alt="Pokebola"></li>
+            <li><h1><a href="/">Pokedex</a></h1></li>
+            <li><a href="#cadastro">Cadastro</a></li>
+            <li><a href="#cards">Pokemons</a></li>
+        </ul>
+    </nav>
     <header>
-        <h1>Pokedex</h1>
+        <img src="/img/banner.png" alt="">
     </header>
     <main>
-        <section id="cards">
-            <% pokedex.forEach((pokemon) =>{ %>
-                <div class="card">
-                    <img src="<%= pokemon.img%>" alt="">
-                    <h2><%= pokemon.nome%></h2>
-                    <p class="descricao"><%= pokemon.descricao%></p>
-                    <p class="tipo">Tipo: <%= pokemon.tipo%></p>
-                </div>
-            <% }) %>
-        </section>
         <section id="cadastro">
-            <h2>Cadastre um novo Pokemon</h2>
+            <%if(pokemon == undefined) { %>
+            <img src="./img/pokedex.png" alt="Pokedex">
+            <div>
+                <h2>Cadastre um novo Pokemon</h2>
+
             <form action="/cadastro" method="post">
                 <label for="nome">Nome:</label>
                 <input type="text" name="nome" id="nome">
@@ -34,13 +36,50 @@
                 <label for="tipo">Tipo:</label>
                 <input type="text" name="tipo" id="tipo">
 
-                <label for="imagem">Imagem:</label>
-                <input type="text" name="img" id="imagem">  
+                <label for="img">Imagem:</label>
+                <input type="text" name="img" id="img">  
 
                 <button id="btnCadastrar" type="submit">Cadastrar</button>
             </form>
+            <% }else { %>     
+            <form action="/update/<%= pokemon.id %>" method="post">
+                <h2>Atualize o pokemon</h2>
+                <label for="nome">Nome:</label>
+                <input type="text" name="nome" id="nome" value="<%= pokemon.nome %>">
+
+                <label for="descricao">Descrição:</label>
+                <input type="text" name="descricao" id="formDescricao" value="<%= pokemon.descricao %>">
+
+                <label for="tipo">Tipo:</label>
+                <input type="text" name="tipo" id="tipo" value="<%= pokemon.tipo %>">
+
+                <label for="img">Imagem:</label>
+                <input type="text" name="img" id="img" value="<%= pokemon.img %>">  
+
+                <button id="btnAtualizar" type="submit">Atualizar</button>
+            </form>
+            <% } %>
+            </div>
+        </section>
+        <section id="cards">
+            <h2>Lista de Pokemons</h2>
+            <% pokedex.forEach((pokemon) =>{ %>
+                <div class="card">
+                    <img src="<%= pokemon.img%>" alt="">
+                    <h3><%= pokemon.nome%></h3>
+                    <p class="descricao"><%= pokemon.descricao%></p>
+                    <p class="tipo">Tipo: <%= pokemon.tipo%></p>
+                    <div id="configuracoes">
+                        <a id="editar" href="/detalhes/<%= pokemon.id %>">Editar</a>
+                        <a id="apagar" href="/delete/<%= pokemon.id %>">Apagar</a>
+                    </div>
+                </div>
+            <% }) %>
         </section>
     </main>
-
+    <footer>
+        <p>Todos os direitos reservados para João Paulo &copy</p>
+        <p>Dados retirados de <a href="https://www.pokemon.com/br/pokedex/" target="_blank">Pokédex</a></p>
+    </footer>
 </body>
 </html>
