--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,10 @@
     font-family: 'Roboto', sans-serif;
     scroll-behavior: smooth;
 }
+a{
+    text-decoration: none;
+    color: black;
+}
 nav{
     position: fixed;
     z-index: 9999;
